feat: Update authentication
인증 페이지 및 구글 서드파티 추가
- spring security의 OAuth2사용
- index controller HTTP session 추가
- OAuth2User 서비스 추가
- OAuthAttributes DTO 추가

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,11 +1,22 @@
 {{>layouts/header}}
 <h1>Getting Started Spring-boot!</h1>
 <div class="col-md-12">
+    <!--로그인-->
     <div class="row">
         <div class="col-md-6">
             <a href="/posts/save" role="button" class="btn btn-primary">글 등록</a>
-        </div>
+            {{#userName}}
+                Logged in as: <span id="user">{{userName}}</span>
+                <a href="/logout" class="btn btn-info active">Log out</a>
+            {{/userName}}
+            {{^userName}}
+                <a href="/oauth2/authorization/google" class="btn btn-success active">
+                    Google Login
+                </a>
+            {{/userName}}
     </div>
+    </div>
+
     <!--포스트 출력-->
     <table class="table table-horizontal table-bordered">
         <thead class="thead-strong">
