feat: add session storage & naver login
- 세션 스토리지 추가: 원래 memcached 같은 In-memory DB를 사용해야 하지만 연습을 위해 jdbc플러그인으로 h2에 연결
- 서드파티 로그인 naver 페이지 및 서비스 추가

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -13,6 +13,9 @@
                 <a href="/oauth2/authorization/google" class="btn btn-success active">
                     Google Login
                 </a>
+                <a href="/oauth2/authorization/naver" class="btn btn-secondary active">
+                    Naver login
+                </a>
             {{/userName}}
     </div>
     </div>
